crates/jarl/tests/integration/snapshots/integration__toml__cli_overrides_toml_completely.snap
---
source: crates/jarl/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--select\").arg(\"length_levels,any_duplicated\").arg(\"--ignore\").arg(\"length_levels\").run().normalize_os_executable_name().normalize_temp_paths()"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --select length_levels,any_duplicated --ignore length_levels
