crates/jarl/tests/integration/snapshots/integration__toml__cli_select_overrides_toml.snap
---
source: crates/jarl/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--select\").arg(\"any_duplicated,length_levels\").run().normalize_os_executable_name().normalize_temp_paths()"
---
success: false
exit_code: 1
----- stdout -----
warning: any_duplicated
 --> test.R:2:1
  |
2 | any(duplicated(x))
  | ------------------ `any(duplicated(...))` is inefficient.
  |
  = help: Use `anyDuplicated(...) > 0` instead.

Found 1 error.
1 fixable with the `--fix` option.

----- stderr -----

----- args -----
check . --select any_duplicated,length_levels
