crates/jarl/tests/integration/snapshots/integration__toml__default_exclude_wrong_values-2.snap
---
source: crates/jarl/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name().normalize_temp_paths()"
---

success: false
exit_code: 255
----- stdout -----

----- stderr -----
jarl failed
  Cause: Failed to parse [TEMP_DIR]/jarl.toml:
TOML parse error at line 3, column 19
  |
3 | default-exclude = ["a"]
  |                   ^^^^^
invalid type: sequence, expected a boolean


----- args -----
check .
