crates/jarl/tests/integration/snapshots/integration__toml__empty_select_array.snap
---
source: crates/jarl/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name().normalize_temp_paths()"
---

success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check .
